--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-perfect-scrollbar": "^1.5.8",
     "sass": "^1.79.3",
     "ssr-window": "^4.0.2",
     "ts-pattern": "^5.4.0"
