--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "sass": "^1.79.3",
     "ssr-window": "^4.0.2",
+    "swr": "^2.2.5",
     "ts-pattern": "^5.4.0"
   },
   "devDependencies": {
