--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "5.21.1",
     "clsx": "^2.1.1",
     "next": "14.2.13",
