--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "antd": "5.21.1",
     "clsx": "^2.1.1",
+    "immutability-helper": "^3.1.1",
     "next": "14.2.13",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-perfect-scrollbar": "^1.5.8",
     "sass": "^1.79.3",
